# discord

./: CMakeLists.txt  Doxyfile  README.md  script-test.txt  valgrind-test.sh
docs/html/: annotated.html  canal_8h_source.html  canal__texto_8h_source.html  canal__voz_8h_source.html  classCanal-members.html  classCanal.html  classCanal__Texto-members.html  classCanal__Texto.html  classCanal__Voz-members.html  classCanal__Voz.html  classParser.html  classServidor-members.html  classServidor.html  classSistema-members.html  classSistema.html  classUsuario.html  classes.html  constantes_8h_source.html  dir_44cac7c85cbcb4a52d88ce1e933e731d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_524400c5a26e63bcb0fb13d04bbb2228.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  menudata.js  parser_8h_source.html  servidor_8h_source.html  sistema_8h_source.html  usuario_8h_source.html
docs/latex/: annotated.tex  canal_8h_source.tex  canal__texto_8h_source.tex  canal__voz_8h_source.tex  classCanal.tex  classCanal__Texto.eps  classCanal__Texto.tex  classCanal__Voz.tex  classServidor.tex  classSistema.tex  classUsuario.tex  constantes_8h_source.tex  files.tex  md_README.tex  mensagem_8h_source.tex  parser_8h_source.tex  refman.aux  refman.idx  (+8 more)
include/: canal.h  canal_texto.h  canal_voz.h  constantes.h  mensagem.h  parser.h  servidor.h  sistema.h  usuario.h
logs/: servidores.txt  usuarios.txt
src/: canal.cpp  canal_texto.cpp  canal_voz.cpp  main.cpp  mensagem.cpp  parser.cpp  servidor.cpp  sistema.cpp  usuario.cpp
(+57 files in other folders)
